--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@ layout: compress
 
 </body>
 
-<footer class="social-footer">
+<!-- <footer class="social-footer">
   <div class="social-footer-icons">
     <a href="https://github.com/DavideBri" title="Github profile" target="_blank"
       rel="noopener noreferrer"><i class="fa fa-github" aria-hidden="true"></i></a>
@@ -70,7 +70,7 @@ layout: compress
     <a href="https://github.com/DavideBri/Gesko" title="Browse the code" target="_blank" rel="noopener noreferrer"><i
         class="fa fa-code" aria-hidden="true"></i></a>
   </div>
-</footer>
+</footer> -->
 
 
 {% if page.url == '/' %}
